--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,46 @@
+body {
+  background: black;
+  margin-top: 100px;
+}
+ul {
+  background: white;
+  padding-top: 20px;
+}
 .octodex {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  justify-content: space-around;
 }
 .octocat {
   width: 50%;
   list-style: none;
+  margin: 5px 10px;
 }
 .octocat img {
-  width: 75%;
-  border: 1px solid black;
+  width: 95%;
+  border: 1px solid lightgrey;
   border-radius: 5px;
 }
 .authors img {
-  width: 15%;
-  align-self: flex-end;
+  width: 40%;
 }
 .image-footer {
   justify-content: space-between;
   display: flex;
+
+  border: 1px solid red;
 }
 .image-number {
-  align-self: flex-start;
+  display: flex;
+
+  color: lightgrey;
+  font-weight: bold;
+  font-size: 20px;
 }
 .image-caption {
   display: flex;
-  align-self: center;
+  justify-content: flex-end;
+  margin-left: 135px;
 }
 
 .authors li {
@@ -34,7 +50,22 @@
   content: "#";
 }
 
-.octocat div {
+.octocat .image-footer {
   justify-content: space-between;
   display: flex;
+}
+span {
+  color: grey;
+  font-weight: bold;
+  font-size: 15px;
+}
+a {
+  color: black;
+  font-weight: bold;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+ul .authors {
+  margin-left: -1px;
 }
